Remove module layers code
Remove the code to put dependencies in separate layers since it
complicates the code and it is usually undesirable to have multiple
versions of the same dep. It can be revisited as an option in the
future. Change the dep resolution to resolve duplicate dependencies.